# d1mas334-tasks_planning_website_2026_LR6

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  README_LAB1.md  README_LAB2.md  docker-compose.yaml  event_catalog.md  event_driven_design.md  openapi.yaml  optimization.md  performance_design.md  schema_design.md  workspace.dsl
configs/: secdist.json  static_config.yaml
db/: data.sql  queries.sql  schema.sql
mongo/: data.js  queries.js  validation.js
src/: main.cpp
tests/: curl_examples.md
worker/: event_worker.py
