cmake_minimum_required(VERSION 3.14)

project(task_planning_api CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(userver COMPONENTS core postgresql mongo redis REQUIRED)

add_executable(${PROJECT_NAME} src/main.cpp)
target_link_libraries(
    ${PROJECT_NAME}
    userver::core
    userver::postgresql
    userver::mongo
    userver::redis
)
